cmake_minimum_required(VERSION 3.16)
project(EndOfTermReview C)

set(CMAKE_C_STANDARD 11)

add_executable(EndOfTermReview1 topic1.c)
add_executable(EndOfTermReview2 topic2.c)
add_executable(EndOfTermReview3 topic3.c)
add_executable(EndOfTermReview4 topic4.c)
add_executable(EndOfTermReview5 topic5.c)

