cmake_minimum_required(VERSION 3.16)
project(EndOfTermReview C)

set(CMAKE_C_STANDARD 11)

add_executable(EndOfTermTesting testing.c)
add_executable(EndOfTermTesting2 testing2.c)

add_executable(EndOfTermReview1 topic1.c)
add_executable(EndOfTermReview2 topic2.c)
add_executable(EndOfTermReview3 topic3.c)
add_executable(EndOfTermReview4 topic4.c)
add_executable(EndOfTermReview5 topic5.c)
add_executable(EndOfTermReview6 topic6.c)
add_executable(EndOfTermReview7 topic7.c)
add_executable(EndOfTermReview8 topic8.c)
add_executable(EndOfTermReview9-1 topic9-1.c)
add_executable(EndOfTermReview9-2 topic9-2.c)
add_executable(EndOfTermReview10 topic10.c)
add_executable(EndOfTermReview11 topic11.c)
add_executable(EndOfTermReview12 topic12.c)
add_executable(EndOfTermReview13 topic13.c)
add_executable(EndOfTermReview14 topic14.c)
add_executable(EndOfTermReview15 topic15.c)
add_executable(EndOfTermReview16 topic16.c)
add_executable(EndOfTermReview17 topic17.c)
add_executable(EndOfTermReview18 topic18.c)
add_executable(EndOfTermReview19 topic19.c)
add_executable(EndOfTermReview20 topic20.c)

